--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "imagina/ibooking",
+    "name": "imagina/ibooking-module",
     "description": "",
     "type": "asgard-module",
     "license": "MIT",
